--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "demoapp",
+  "name": "demo",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.8.1",
+    "gzippo": "^0.2.0",
+    "logfmt": "^1.1.2"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -32,5 +36,11 @@
   },
   "scripts": {
     "test": "grunt test"
-  }
+  },
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC"
 }
