--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "node_modules/.bin/grunt serve"
   },
   "main": "Gruntfile.js",
   "directories": {
