--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "express": "^4.8.1",
     "gzippo": "^0.2.0",
     "logfmt": "^1.1.2",
-    "grunt-cli": "*"
+    "grunt": "*"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
+    "grunt-cli": "*",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -36,8 +37,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "./node_modules/.bin/grunt serve"
+    "test": "grunt test"
   },
   "main": "Gruntfile.js",
   "directories": {
