add grunt and grunt-contrib to dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "express": "^4.8.1",
     "gzippo": "^0.2.0",
     "logfmt": "^1.1.2",
-    "grunt": "*"
+    "grunt": "*",
+    "grunt-contrib": "*",
+    "less": "*"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
