remove less from dependencies as well

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "express": "^4.8.1",
     "gzippo": "^0.2.0",
     "logfmt": "^1.1.2",
-    "grunt": "*",
-    "less": "*"
+    "grunt": "*"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
