--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "dependencies": {
     "express": "^4.8.1",
+    "grunt": "*",
     "gzippo": "^0.2.0",
     "logfmt": "^1.1.2",
-    "grunt": "*"
+    "morgan": "^1.2.2"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
